2009-05-14  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-backgrounds.c (volume_monitor2, mount_pre_unmount_cb,
	  volume_pre_unmount_cb, hd_backgrounds_init): Uses GnomeVFS for
	  volume monitoring to make NB#106158 really work.

2009-05-14  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#106158 - Wrong info note is displayed when back cover is
	opened while loading a image as a background
	Fixes: NB#109265 - Home- 'Unable to open.\nFile corrupted'
	§ckct_ni_unable_to_open_file_corrupted§  is not displayed when
	changing background using a corrupted image

	* src/hd-backgrounds.c:
	* src/Makefile.am:
	* src/hd-background-helper.c (deleted):
	* src/hd-background-helper.h (deleted): Rewrite background caching to
	also support png and jpeg images in cache. Started to implement
	changes for Home UI spec 2.3.

	* debian/changelog: Update.

2009-05-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init):
	Remove unneeded variable 'default_theme_backgrounds' to fix a Coverity
	finding.

	Released 0.3.26
	* configure.ac: 0.3.26

2009-05-07  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#115257 - hildon-home crash observed

	* src/hd-notification-manager.c (hd_notification_manager_init,
	  hd_notification_manager_notify):
	* src/hd-system-notifications.c (show_next_system_dialog,
	  create_note_dialog, dialog, queue, DialogNotificationClosedData,
	  dialog_notification_closed, system_notifications_notified): Make
	  system notifications a bit more robust.

	* debian/changelog: Update.

2009-05-07  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#115081, NB#113751 - Sound broken when a banner is displayed

	* src/hd-incoming-events.c (hd_incoming_events_notified): Disable
	plugins support for system.note.* category again. It does not work.

	* debian/changelog: Update.

2009-05-06  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
